syntax = "proto3";

import "com/sunya/electionguard/protogen/common.proto";

option java_package = "com.sunya.electionguard.protogen";
option java_outer_classname = "CiphertextTallyProto";

// Encrypted Tally of some collection of ballots.
message CiphertextTally {
  string object_id = 1;

  // Map(CONTEST_ID, CiphertextTallyContest)
  map<string, CiphertextTallyContest> contests = 2;
}

message CiphertextTallyContest {
  string object_id = 1;
  int32 sequence_order = 2;

  // The ContestDescription hash.
  ElementModQ description_hash = 3;

  // Map(SELECTION_ID, CiphertextTallySelection)
  map<string, CiphertextTallySelection> tally_selections = 4;
}

// A homomorphic accumulation of CiphertextBallotSelections.
message CiphertextTallySelection {
  string object_id = 1;
  int32 sequence_order = 2;
  ElementModQ description_hash = 3;
  // accumulation over all the cast ballots
  ElGamalCiphertext ciphertext = 4;
}
